--- a/mirellaP.Rmd
+++ b/mirellaP.Rmd
@@ -50,22 +50,7 @@ library(rgeos)
 ```
 
 
-#THIS
-```{r}
 
-proj4_aea <- "+proj=aea +lat_1=29.5 +lat_2=42.5 +lat_0=37.5 +lon_0=-96 +x_0=0 +y_0=0 +ellps=GRS80 +datum=NAD83 +units=m +no_defs"
-parking <- data.frame(lat = 42.448013, lon = -72.680663)%>%
-     spTransform(CRS(proj4_aea))
-
-
-
-parking_buffed <- parking %>%
-  gBuffer(width = 10) %>%
-  spTransform(CRS("+init=epsg:4326"))
-
-
-
-```
 
 
 
@@ -74,13 +59,13 @@ parking_buffed <- parking %>%
 ```{r}
 group_campsite <- data.frame(lat = 42.450976, lon = -72.678154)
 remote_campsite <- data.frame(lat = 42.458570, lon =  -72.674732)
-
+parking <- data.frame(lat = 42.448013, lon = -72.680663)
 
 leaflet() %>%
   addTiles() %>%
   
   ##
-#  addProviderTiles("Esri.WorldTopoMap", group = "Topography") %>%
+  addProviderTiles("Esri.WorldTopoMap", group = "Topography") %>%
   
   addMarkers(lng = ~lon, lat = ~lat, data = group_campsite,
              popup = "Group Campsite") %>%
@@ -96,10 +81,9 @@ leaflet() %>%
   addMarkers(lng = ~lon, lat = ~lat, data = parking,
               popup = "Parking") %>%
 
-  #addCircles(lng = ~lon, lat = ~lat, data = parking,
-             #radius = 804.672, popup = "Parking Away")
-  addPolylines(data = parking_buffed, weight = 2, popup = "Parking Away")
-  
+  addCircles(lng = ~lon, lat = ~lat, data = parking,
+             radius = 804.672, popup = "Parking Away")
+
   
 ```
 
