--- a/mirellaP.Rmd
+++ b/mirellaP.Rmd
@@ -51,10 +51,6 @@ library(rgeos)
 
 
 
-
-
-
-
 #THIS
 ```{r}
 group_campsite <- data.frame(lat = 42.450976, lon = -72.678154)
@@ -74,8 +70,8 @@ leaflet() %>%
 
   addPolylines(data = macleish_layers[["trails"]],
               color = "brown", popup = "trails") %>%
-  addPolylines(data = macleish_layers[["streams"]],
-               popup = "streams") %>%
+  #addPolylines(data = macleish_layers[["streams"]],
+   #            popup = "streams") %>%
   addPolylines(data = macleish_layers[["forests"]],
                color = "green", popup = "forests") %>%
   addMarkers(lng = ~lon, lat = ~lat, data = parking,
@@ -83,8 +79,6 @@ leaflet() %>%
 
   addCircles(lng = ~lon, lat = ~lat, data = parking,
              radius = 804.672, popup = "Parking Away")
-
-  
 ```
 
 
